--- a/luck-of-die-frontend/index.css
+++ b/luck-of-die-frontend/index.css
@@ -29,7 +29,7 @@ body {
 }
 
 #main {
-    padding-top: 50px;
+    padding-top: 20px;
 }
 
 #leaderboard {
@@ -52,4 +52,72 @@ body {
 #logo {
     margin: auto;
     width: 36%;
+}
+
+h1 {
+    font-family: "Arial Black", Gadget, sans-serif;
+    font-size: 20px;
+    letter-spacing: 0px;
+    word-spacing: 0px;
+    color: #000000;
+    font-weight: 400;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+}
+
+.cup {
+    position: relative;
+    top: -50px;
+    animation: shake 0.5s;
+    animation-iteration-count: 1;
+}
+.dice {
+    position: absolute;
+    top: 105px;
+    left: 335px;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+.fade-out {
+    animation: fadeOut ease 2.7s;
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity:1;
+    }
+    100% {
+        opacity:0;
+    }
+}
+
+#modes {
+    font-family: "Arial Black", Gadget, sans-serif;
+    text-align: left;
+    font-size: 16px;
+    letter-spacing: 0px;
+    word-spacing: 0px;
+    color: #000000;
+    font-weight: 400;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+    color: rgb(238, 238, 238);
+    text-shadow: 0 0 9px rgb(219, 217, 217);
 }
